# how2cli

./: Cargo.toml  PKGBUILD  README.md  humanmade.md  testbench.json
docs/: architecture.md  configuration.md  development.md
shell/: h.bash  h.zsh
src/: api.rs  config.rs  format.rs  image.rs  main.rs  prompt.rs  session.rs  shell.rs  testbench.rs
